// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal should not render if not open 1`] = `<DocumentFragment />`;

exports[`Modal should render a modal with content 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="fixed flex flex-col z-10 left-0 right-0 max-w-2xl rounded-xl bg-theme-background mx-auto mt-24 pt-6 pb-8 px-16"
    data-testid="modal__inner"
  >
    <div
      class="absolute right-0 top-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm jZZsoN"
        color="neutral"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <div>
            <div>
              <div
                data-src="cross-slim.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 overflow-auto"
      >
        This is the Modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with description 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="fixed flex flex-col z-10 left-0 right-0 max-w-2xl rounded-xl bg-theme-background mx-auto mt-24 pt-6 pb-8 px-16"
    data-testid="modal__inner"
  >
    <div
      class="absolute right-0 top-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm jZZsoN"
        color="neutral"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <div>
            <div>
              <div
                data-src="cross-slim.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 overflow-auto"
      >
        <div
          class="text-theme-neutral-500"
        >
          This is the Modal description
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal should render a modal with overlay 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-10 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="fixed flex flex-col z-10 left-0 right-0 max-w-2xl rounded-xl bg-theme-background mx-auto mt-24 pt-6 pb-8 px-16"
    data-testid="modal__inner"
  >
    <div
      class="absolute right-0 top-0 mt-4 mr-4"
    >
      <button
        class="sc-AxjAm jZZsoN"
        color="neutral"
        type="button"
      >
        <div
          class="sc-AxirZ fttODj"
          height="10"
          width="10"
        >
          <div>
            <div>
              <div
                data-src="cross-slim.svg"
                src=""
              />
            </div>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2>
        ark
      </h2>
      <div
        class="flex-1 overflow-auto"
      >
        This is the Modal content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
